# AloeGraph

./: .gitignore  404.html  LICENSE  MANIFEST.in  Makefile  mkdocs.yml  objects.inv  pyproject.toml  registry_host  sitemap.xml
api_reference/aloegraph/: index.html
api_reference/aloegraph/V2/: index.html
api_reference/aloegraph/V2/agent/: index.html
api_reference/aloegraph/V2/exception/: index.html
api_reference/aloegraph/V2/graph/: index.html
api_reference/aloegraph/V2/response_generator/: index.html
api_reference/aloegraph/agent/: index.html
api_reference/aloegraph/aloe_config/: index.html
api_reference/aloegraph/aloe_graph/: index.html
api_reference/aloegraph/dialog/: index.html
api_reference/aloegraph/model/: index.html
api_reference/aloegraph/node/: index.html
docs/api_reference/aloegraph/: aloe_config.md  aloe_graph.md  index.md
examples/: AgentSetup.ipynb  GeminiAloeChat.ipynb  SimpleGeminiChat.ipynb
search/: search_index.json
src/aloegraph/: __init__.py  aloe_config.py  aloe_graph.py
src/aloegraph/V2/: __init__.py  response_generator.py  v2_aloe_graph.py  v2_base_model.py  v2_base_response.py
src/aloegraph/V2/agent/: __init__.py  (+11 more)
src/aloegraph/agent/: __init__.py  simple_gemini_chat_agent.py
src/aloegraph/dialog/: __init__.py  notebook_chat_dialog.py
src/aloegraph/gemini/: util.py
src/aloegraph/interface/: chat_agent.py  chat_dialog.py
src/aloegraph/model/: __init__.py  base_model.py  response_model.py
src/aloegraph/node/: __init__.py  refinement.py
template/: gen.py  pyproject.template.toml
tools/: gen_ref_pages.py
(+69 files in other folders)
