[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.4"]
build-backend = "setuptools.build_meta"

[project]
name="aloegraph"
dynamic = ["version"]
description = "AloeGraph is a lightweight, schema-driven workflow engine for managing refinable tasks and agent orchestration."

license = "apache-2.0"
requires-python = ">=3.8"

authors = [{email = "michael@aloecraft.org"}]
maintainers = [{email = "michael@aloecraft.org"}]
readme = "README.md"

dependencies = [
    "ipywidgets",
    "google-genai",
]

[tool.setuptools.packages.find]
where = ["src"]